# time-series-airflow-kafka-spark

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
aks/: DataModels.py
aks/examples/: 1_consume_stream.py  2_spark_consume_stream.py  3_online_learning_stream.py  4_mlflow_online_model.py  5_deploy_online_model.py
conf/: config.yaml
conf/data/: airline.yaml
conf/experiment/: mlflow.yaml
conf/metrics/: time_series.yaml
conf/time_series/: holt_winters.yaml  snarimax.yaml
scripts/: launch_example_model.sh
taks/: DataModels.py  receive_stream.py  send_stream.py  test.py
taks/examples/: spark_consume_stream.py
